--- a/app/assets/stylesheets/screen.scss
+++ b/app/assets/stylesheets/screen.scss
@@ -29,7 +29,7 @@ $large: 1024px;
   
    @include respond-to(handhelds) { max-width: 320px; padding: 0.5em; }
    @include respond-to(medium-screens) { max-width: 320px; }
-   @include respond-to(wide-screens) { min-width: 180px; max-width: 500px; } 
+   @include respond-to(wide-screens) { min-width: 180px; max-width: 400px; } 
 }
 
 .view p
@@ -37,21 +37,21 @@ $large: 1024px;
    font-size: 22px;
    @include respond-to(handhelds) { max-width: 320px; padding: 0.5em; font-size: 12px; }
    @include respond-to(medium-screens) { max-width: 320px; font-size: 14px; }
-   @include respond-to(wide-screens) { min-width: 180px; max-width: 500px; } 
+   @include respond-to(wide-screens) { min-width: 180px; max-width: 400px; } 
 }
 .view h2 
 {
   
    @include respond-to(handhelds) { max-width: 280px; padding: 0.5em; }
    @include respond-to(medium-screens) { max-width: 320px; }
-   @include respond-to(wide-screens) { min-width: 180px; max-width: 500px; } 
+   @include respond-to(wide-screens) { min-width: 180px; max-width: 400px; } 
 }
 .mask
 {
   
    @include respond-to(handhelds) { max-width: 320px; padding: 0.5em; }
    @include respond-to(medium-screens) { max-width: 320px; }
-   @include respond-to(wide-screens) { min-width: 180px; max-width: 500px; } 
+   @include respond-to(wide-screens) { min-width: 180px; max-width: 400px; } 
 }
 
 .img_home_left {
@@ -60,7 +60,7 @@ $large: 1024px;
    @include respond-to(handhelds) { max-width: 320px; padding: 0.5em; float: left; }
 
    @include respond-to(medium-screens) { max-width: 320px;  float: left; }
-   @include respond-to(wide-screens) { min-width: 180px; max-width: 500px; } 
+   @include respond-to(wide-screens) { min-width: 180px; max-width: 400px; } 
 
    }
 p_home_left {
@@ -83,3 +83,9 @@ p_home_left {
 }
 
 
+.body-style
+{
+                       
+   @include respond-to(handhelds) { background-color: #ebebeb; background-image: none; }
+   @include respond-to(medium-screens) { background-color: #ebebeb; background-image: none; }
+}
