--- a/app/views/layouts/index.html.erb
+++ b/app/views/layouts/index.html.erb
@@ -32,7 +32,7 @@ a:hover {
   <div id="preloader">
    <div class="dws-progress-bar"></div>
     </div>
-     <div class="animated fadeInDownBig"><div class="logo"><img src="https://image.ibb.co/i8Yo7y/logo.png" alt="logo" border="0"></div></div>
+     <div class="animated fadeInDownBig"><div class="logo"><img src="http://drive.google.com/uc?export=view&id=1Ud_H2roZwVPKPfZx8ukSNOzEUtodMZcG" alt="logo" border="0"></div></div>
       <div class="logo_text2">Web Joys</div>
        <div class="logo_text1"><%= t('.logo_text') %></div>  
     <div class="ln"><div class="animated bounceInDown"><div class="btn_ln">
@@ -117,21 +117,11 @@ a:hover {
        <%= t('.text_home8') %><br><br>
        <div class="text_a.s"><%= t('.text_as') %></div>
      </div>
-     <nav id="menu2">
-<a href="#lp1" class="scrollto2"><div class="arrow-scroll2">
-    <div class="arrow-scroll__wrap arrow-scroll__wrap_animated">
-      <svg style="fill:#000;" x="0px" y="0px" width="38.417px" height="18.592px" viewbox="0 0 38.417 18.592" id="lp1">
-        <g>
-          <path d="M19.208,18.592c-0.241,0-0.483-0.087-0.673-0.261L0.327,1.74c-0.408-0.372-0.438-1.004-0.066-1.413c0.372-0.409,1.004-0.439,1.413-0.066L19.208,16.24L36.743,0.261c0.411-0.372,1.042-0.342,1.413,0.066c0.372,0.408,0.343,1.041-0.065,1.413L19.881,18.332C19.691,18.505,19.449,18.592,19.208,18.592z"></path>
-        </g>
-      </svg>
-    </div>
-  </div>
-</a></nav>
+    
    </div></div>
          <div class="col-sm-4 col-md-4 col-lg-6">
                 <div class="view view-first">
-                   <img class="img_home_left" src="https://image.ibb.co/kdk70J/Screenshot_12.png" alt="">
+                   <img class="img_home_left" src="http://drive.google.com/uc?export=view&id=1sPtovysw7yPra9-EIkCJoMI5X6AVoowv" alt="">
 
                     <div class="mask">
                         <h2 class="class="view view-first""><%= t('.text_blog') %></h2>
@@ -144,7 +134,7 @@ a:hover {
          <div class="col-sm-4 col-md-8 col-lg-6">
            
   <div class="view view-first">
-                   <img class="img_home_left" src="https://image.ibb.co/fmimcy/Screenshot_21.png" alt="">
+                   <img class="img_home_left" src="http://drive.google.com/uc?export=view&id=17JK7f6vLP3xcGUKWHDxjJ5-iHyAbG5i9" alt="">
                     <div class="mask">
                         <h2 class="class="view view-first""><%= t('.text_landing0') %></h2>
                         <p class="class="view view-first""><%= t('.text_landing_title') %></p>
@@ -158,7 +148,7 @@ a:hover {
        <div class="col-sm-4 col-md-4 col-lg-6">
 
        <div class="view view-first">
-                   <img class="img_home_left" src="https://image.ibb.co/jKXWSy/Screenshot_13.jpg" alt="">
+                   <img class="img_home_left" src="http://drive.google.com/uc?export=view&id=1y6Jr3uXRyqQBLdXR3SRN4Ok78xv0t9sc" alt="">
                     <div class="mask">
                         <h2 class="class="view view-first"">landing page 1</h2>
                         <p class="class="view view-first""><%= t('.text_landing1') %></p>
@@ -170,7 +160,7 @@ a:hover {
          <div class="col-sm-4 col-md-8 col-lg-6">
            
 <div class="view view-first">
-                   <img class="img_home_left" src="https://image.ibb.co/hH5J7y/Screenshot_15.jpg" alt="">
+                   <img class="img_home_left" src="http://drive.google.com/uc?export=view&id=1iUpqfYArsix-veyRMNs3K0mIkWSx83Ce" alt="">
                     <div class="mask">
                         <h2 class="class="view view-first"">landing page 2</h2>
                         <p class="class="view view-first""><%= t('.text_landing1') %></p>
@@ -184,7 +174,7 @@ a:hover {
        <div class="col-sm-4 col-md-4 col-lg-6">
 
        <div class="view view-first">
-                   <img class="img_home_left" src="https://image.ibb.co/e529Ed/Screenshot_17.jpg" alt="">
+                   <img class="img_home_left" src="http://drive.google.com/uc?export=view&id=1x1mlM4K0e9LsUXSpmm7oBgufndIvcTlP" alt="">
                     <div class="mask">
                         <h2 class="class="view view-first"">landing page 3</h2>
                         <p class="class="view view-first""><%= t('.text_landing1') %></p>
@@ -196,7 +186,7 @@ a:hover {
          <div class="col-sm-4 col-md-8 col-lg-6">
            
 <div class="view view-first">
-                   <img class="img_home_left" src="https://image.ibb.co/iteZfJ/Screenshot_19.jpg" alt="">
+                   <img class="img_home_left" src="http://drive.google.com/uc?export=view&id=1iBBeh2rAMUd1oRMjE7LhqxuOAQ0sw9vk" alt="">
                     <div class="mask">
                         <h2 class="class="view view-first"">landing page 4</h2>
                         <p class="class="view view-first""><%= t('.text_landing1') %></p>
@@ -302,25 +292,6 @@ top = $(id).offset().top;
 $('body,html').animate({scrollTop: top}, 1000);
 });
 });</script>
-
-<script type="text/javascript">
-
-  $(document).ready(function(){
-$("#menu2").on("click","a", function (event) {
-//отменяем стандартную обработку нажатия по ссылке
-event.preventDefault();
-
-//забираем идентификатор бока с атрибута href
-var id = $(this).attr('href'),
-
-//узнаем высоту от начала страницы до блока на который ссылается якорь
-top = $(id).offset().top;
-
-//анимируем переход на расстояние - top за 1500 мс
-$('body,html').animate({scrollTop: top}, 1000);
-});
-});</script>
-
 
 <script type="text/javascript">
   $(function(){
