--- a/app/assets/stylesheets/home.sass
+++ b/app/assets/stylesheets/home.sass
@@ -2,7 +2,6 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 .logo
-  
   position: absolute
   width: 127px
   height: 121px
@@ -12,6 +11,68 @@
   transform: translate(-50%, -50%)
   margin: 0
   margin-bottom: -7px
+
+.center_dv
+  left: 50%
+  margin-right: -50%
+  transform: translate(-50%, -50%)
+  margin: 0 
+  position: relative
+.logo_home
+  position: absolute
+  width: 127px
+  height: 121px
+  top: 120px
+  left: 50%
+  margin-right: -50%
+  transform: translate(-50%, -50%)
+  margin: 0
+  margin-bottom: -7px 
+.logo_vps
+  width: 83px
+  height: 27px  
+.logo_ds
+  width: 47px
+  height: 47px  
+.blok_top  
+  height: 380px
+  position: relative
+.blok_top2 
+  height: 180px
+  position: relative
+  padding-top: 3em
+.blog_1  
+  padding-top: 3em
+.logo_top
+  width: 180px
+  height: 160px  
+.toph3
+  border-bottom: 1px solid #BAC1C8
+  color: #d86e0d
+  font-size: 18px
+  font-weight: 600
+  line-height: 27px
+  text-transform: uppercase
+  text-align: center  
+.toph1 
+  border-bottom: 1px solid #BAC1C8
+  color: #333
+  font-size: 18px
+  font-weight: 600
+  line-height: 27px
+  text-transform: uppercase
+  text-align: center  
+.toph4
+  color: #333
+  font-size: 14px
+  font-weight: 400
+  text-align: center 
+  text-transform: uppercase  
+.toph4_2   
+  color: #333
+  font-size: 10px
+  text-align: left
+  text-align: center 
 .logo_text1
   position: absolute
   bottom: 0
@@ -42,6 +103,8 @@
 .ln
   float: right
   padding: 2em
+  z-index: 90
+  position: relative
 .btn_ln
   width: 100px
   height: 45px
@@ -92,7 +155,8 @@
   -o-animation-delay: 1s
   -moz-animation-delay: 1s
   animation-delay: 0.5s
-  
+  position: relative
+  z-index: 99
 .dws-progress-bar 
   position: absolute
   top: 50%
@@ -117,7 +181,7 @@
   right: 0
   bottom: 0
   z-index: 100
-
+  
 .main-preloader 
   position: fixed
   width: 100%
@@ -419,3 +483,16 @@ h1
   margin-bottom: 40px
   position: relative
   top: 25px
+.carousel-control.right
+  height: 680px
+.carousel-control.left
+  height: 680px
+.carousel-indicators li  
+  border: 1px solid #bdbdbd
+.sl_buttom  
+  font-family: inherit
+  font-weight: 500
+  line-height: 1.1
+  color: inherit
+.sl_buttom:hover
+  color: #ffffff
