--- a/app/assets/stylesheets/navbar_collaps.scss
+++ b/app/assets/stylesheets/navbar_collaps.scss
@@ -6,6 +6,7 @@ nav.navbar.stickytop {
        z-index: 99;
        box-shadow: 2px 2px 2px 1px rgba(171, 166, 166, 0.3);
        height: 66px;
+       z-index: 999;
 }
 
 nav.navbar_home.stickytop {
