--- a/app/views/layouts/index.html.erb
+++ b/app/views/layouts/index.html.erb
@@ -22,13 +22,16 @@ a:hover {
   color: #333;  }
  
      </style>
-      
+     <link rel="stylesheet" href="boot-slider/css/style.css" type="text/css">
+  <link rel="stylesheet" href="boot-slider/css/media.css" type="text/css" media="all and (max-width:900px)"> 
+  <link rel="stylesheet" href="boot-slider/css/bootstrap.css" type="text/css">
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
      <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
      <link href="https://fonts.googleapis.com/css?family=Caveat" rel="stylesheet"> 
-              
+     
+<script>new WOW().init();</script>         
      </head>
- <body class="body-style">  
+ <body class="body-style" style='overflow-x:hidden;'>  
   <div id="preloader">
    <div class="dws-progress-bar"></div>
     </div>
@@ -43,7 +46,51 @@ a:hover {
              <div class="btn_ln_ru"<%= " active" if I18n.locale == :ru %>">
               <%= link_to "Ру", { locale: :ru }, class: "link_ru" %>
             </div> </div></div></div>
-  <div class="header"><nav id="menu">
+  <div class="header">
+<wrapper>
+  <div id="dws-slider" class="carousel slide" data-ride="carousel">
+    <!--Показатели-->
+    <ol class="carousel-indicators">
+      <li data-target="#dws-slider" data-slide-to="0" class="active"></li>
+      <li data-target="#dws-slider" data-slide-to="1"></li>
+      <li data-target="#dws-slider" data-slide-to="2"></li>
+    </ol>
+
+    <!--Обертка для слайдов-->
+    <div class="carousel-inner" role="listbox">
+      <div class="item active"><img class="media_s" src="boot-slider/img/slider-1.png" alt="Картинка 1">
+        <div class="carousel-caption">
+           <a class="sl_buttom" href="#"><h3 class="text-uppercase"><%= t('.read_s1') %></h3></a>
+          <p><%= t('.read_ms1') %></p>
+        </div>
+      </div>
+      <div class="item"><img src="boot-slider/img/slider-2.png" alt="Картинка 2">
+        <div class="carousel-caption">
+          <a class="sl_buttom" href="#"><h3 class="text-uppercase"><%= t('.read_s2') %></h3></a>
+          <p><%= t('.read_ms2') %></p>
+        </div>
+      </div>
+      <div class="item"><img src="boot-slider/img/slider-3.png" alt="Картинка 3">
+        <div class="carousel-caption">
+           <a class="sl_buttom" href="<%= posts_path %>"><h3 class="text-uppercase"><%= t('.read_s3') %></h3>
+          <p><%= t('.read_ms3') %></p>
+        </div>
+      </div>
+    </div>
+
+    <!--Элементы управления-->
+    <a class="left carousel-control" href="#dws-slider" role="button" data-slide="prev">
+      <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+      <span class="sr-only">Previous</span>
+    </a>
+    <a class="right carousel-control" href="#dws-slider" role="button" data-slide="next">
+      <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+      <span class="sr-only">Next</span>
+    </a>
+  </div>
+</wrapper>
+
+    <nav id="menu">
 <a href="#bloc" class="scrollto"><div class="arrow-scroll">
     <div class="arrow-scroll__wrap arrow-scroll__wrap_animated">
       <svg style="fill:#000;" x="0px" y="0px" width="38.417px" height="18.592px" viewbox="0 0 38.417 18.592">
@@ -78,8 +125,8 @@ a:hover {
             <li class="dropdown nav-link3">
               <a href="#" class="dropdown-toggle nav-link3" data-toggle="dropdown"> <i class="fa fa-align-justify" aria-hidden="true"></i><b class="caret"></b></a>
               <ul class="dropdown-menu">
-                <li><a class="link_to" href="#"><i class="fa fa-graduation-cap" aria-hidden="true"></i>&nbsp;<%= t('.btn_works') %></a></li>
-                <li><a class="link_to" href="#"><i class="fa fa-image" aria-hidden="true"></i>&nbsp; <%= t('.btn_works') %></a></li>
+                <li><a class="link_to" href="#"><i class="fa fa-graduation-cap" aria-hidden="true"></i>&nbsp;<%= t('.read_s1') %></a></li>
+                <li><a class="link_to" href="#"><i class="fa fa-image" aria-hidden="true"></i>&nbsp; <%= t('.read_s2') %></a></li>
                 <li><a class="link_to" href="#"><i class="fa fa-paint-brush " aria-hidden="true"></i>&nbsp; <%= t('.btn_works') %></a></li></li>
                 <li class="divider"></li>
                 <li class="dropdown-header"></i>&nbsp; &nbsp; &nbsp; <%= t('.btn_new_cat') %></li>
@@ -104,51 +151,60 @@ a:hover {
   <!--///////////////////-->
  <div class="container">
   <div class="row">
-    <div class="content">
-       <div class="col-sm-12 col-md-12 col-lg-12">
-        <div class="stih"><div class="text_home_title"><h2><%= t('.text_home_title') %></h2></div>
-     <div class="text_home"><%= t('.text_home1') %><br>
-       <%= t('.text_home2') %><br>
-       <%= t('.text_home3') %><br>
-       <%= t('.text_home4') %><br><br>
-       <%= t('.text_home5') %><br>
-       <%= t('.text_home6') %><br>
-       <%= t('.text_home7') %><br>
-       <%= t('.text_home8') %><br><br>
-       <div class="text_a.s"><%= t('.text_as') %></div>
-     </div>
+    <div class="content"><div class="col-sm-12 col-md-12 col-lg-12"><h1 class="toph3"><%= t('.gratitude') %></h1></div>
+      <div class="blok_top2">
+  <div class="col-xs-3 col-md-3 col-lg-3"><h4 class="toph4"><%= t('.gratitude_vps') %></h4><h4 class="toph4_2"><%= t('.gratitude_vps2') %></h4></div>
+   <div class="col-xs-3 col-md-3 col-lg-3"><div class="wow fadeInLeftBig"><a href="https://justhost.ru" target="_blank"><img class="logo_vps" src="parallax/images/logo_vps.png" alt="анимация элементов при прокрутке страницы"/></a></div></div>
+   <div class="col-xs-3 col-md-3 col-lg-3"><h4 class="toph4"><%= t('.gratitude_ds') %></h4><h4 class="toph4_2"><%= t('.gratitude_ds2') %></h4></div>
+   <div class="col-xs-3 col-md-3 col-lg-3"><div class="wow fadeInRightBig"><a href="https://www.youtube.com/channel/UCzBDZvjXprwp4nG9qgbudKA" target="_blank"><img class="logo_ds" src="parallax/images/photo.jpg" alt="анимация элементов при прокрутке страницы"/></a></div></div>
+ </div>
+       <div class="blok_top">
+        <div class="col-xs-3 col-md-3 col-lg-3">
+        <div class="logo_home" >
+    <div class="wow slideInLeft"><a href="https://rubyonrails.org/" target="_blank"><img class="logo_top" src="parallax/images/rails.png" alt="анимация элементов при прокрутке страницы"/></a></div>
+  </div>       
     
-   </div></div>
-         <div class="col-sm-4 col-md-4 col-lg-6">
-                <div class="view view-first">
-                   <img class="img_home_left" src="http://drive.google.com/uc?export=view&id=1sPtovysw7yPra9-EIkCJoMI5X6AVoowv" alt="">
+   </div>
+<div class="col-xs-3 col-md-3 col-lg-3">
+        <div class="logo_home" >
+    <div class="wow slideInLeft"><a href="https://www.ubuntu.com/" target="_blank"><img class="logo_top" src="parallax/images/ubu.png" alt="анимация элементов при прокрутке страницы"/></a></div>
+  </div>       
+    
+   </div>
+   <div class="col-xs-3 col-md-3 col-lg-3">
+        <div class="logo_home" >
+    <div class="wow slideInLeft"><a href="https://www.postgresql.org/" target="_blank"><img class="logo_top" src="parallax/images/post.png" alt="анимация элементов при прокрутке страницы"/></a></div>
+  </div>       
+    
+   </div>
+   <div class="col-xs-3 col-md-3 col-lg-3">
+        <div class="logo_home" >
+    <div class="wow slideInLeft"><a href="https://nginx.ru/ru/" target="_blank"><img class="logo_top" src="parallax/images/nginx.png" alt="анимация элементов при прокрутке страницы"/></a></div>
+  </div>      
+    
+   </div>
+  
+ </div>
+ </div>
+<div class="col-sm-12 col-md-12 col-lg-12"><h1 class="toph1"><%= t('.gratitude_blog') %></h1></div>
+ <div class="center_dv"><div class="col-sm-4 col-md-4 col-lg-4"></div>
+         <div class="col-sm-4 col-md-4 col-lg-4">
+               <div class="blog_1"><div class="view view-first">
+                   <img class="img_home_left" src="https://drive.google.com/uc?export=view&id=1sPtovysw7yPra9-EIkCJoMI5X6AVoowv" alt="">
 
                     <div class="mask">
                         <h2 class="class="view view-first""><%= t('.text_blog') %></h2>
                         <p class="class="view view-first""><%= t('.text_blog1') %></p>
                         <a href="#" class="info"><%= t('.read_more') %></a>
                     </div>
-                </div> 
-                </div>
-        
-         <div class="col-sm-4 col-md-8 col-lg-6">
-           
-  <div class="view view-first">
-                   <img class="img_home_left" src="http://drive.google.com/uc?export=view&id=17JK7f6vLP3xcGUKWHDxjJ5-iHyAbG5i9" alt="">
-                    <div class="mask">
-                        <h2 class="class="view view-first""><%= t('.text_landing0') %></h2>
-                        <p class="class="view view-first""><%= t('.text_landing_title') %></p>
-                        <a href="../parallax/" class="info" target="_blank"><%= t('.read_more') %></a>
-                    </div>
-                </div> 
-               </div>
-
+                </div></div> 
+                </div><div class="col-sm-4 col-md-4 col-lg-4"></div></div>
+                
     <div class="clearfix"></div>
-    <div class="content">
+    <div class="content"><div class="col-sm-12 col-md-12 col-lg-12"><div class="blog_1"><h1 class="toph1"><%= t('.Landing1') %></h1></div></div>
        <div class="col-sm-4 col-md-4 col-lg-6">
-
-       <div class="view view-first">
-                   <img class="img_home_left" src="http://drive.google.com/uc?export=view&id=1y6Jr3uXRyqQBLdXR3SRN4Ok78xv0t9sc" alt="">
+        <div class="view view-first">
+                   <img class="img_home_left" src="https://drive.google.com/uc?export=view&id=1y6Jr3uXRyqQBLdXR3SRN4Ok78xv0t9sc" alt="">
                     <div class="mask">
                         <h2 class="class="view view-first"">landing page 1</h2>
                         <p class="class="view view-first""><%= t('.text_landing1') %></p>
@@ -157,10 +213,10 @@ a:hover {
                 </div> 
                 </div>
         
-         <div class="col-sm-4 col-md-8 col-lg-6">
+         <div class="col-sm-4 col-md-4 col-lg-6">
            
 <div class="view view-first">
-                   <img class="img_home_left" src="http://drive.google.com/uc?export=view&id=1iUpqfYArsix-veyRMNs3K0mIkWSx83Ce" alt="">
+                   <img class="img_home_left" src="https://drive.google.com/uc?export=view&id=1iUpqfYArsix-veyRMNs3K0mIkWSx83Ce" alt="">
                     <div class="mask">
                         <h2 class="class="view view-first"">landing page 2</h2>
                         <p class="class="view view-first""><%= t('.text_landing1') %></p>
@@ -174,7 +230,7 @@ a:hover {
        <div class="col-sm-4 col-md-4 col-lg-6">
 
        <div class="view view-first">
-                   <img class="img_home_left" src="http://drive.google.com/uc?export=view&id=1x1mlM4K0e9LsUXSpmm7oBgufndIvcTlP" alt="">
+                   <img class="img_home_left" src="https://drive.google.com/uc?export=view&id=1x1mlM4K0e9LsUXSpmm7oBgufndIvcTlP" alt="">
                     <div class="mask">
                         <h2 class="class="view view-first"">landing page 3</h2>
                         <p class="class="view view-first""><%= t('.text_landing1') %></p>
@@ -186,35 +242,34 @@ a:hover {
          <div class="col-sm-4 col-md-8 col-lg-6">
            
 <div class="view view-first">
-                   <img class="img_home_left" src="http://drive.google.com/uc?export=view&id=1iBBeh2rAMUd1oRMjE7LhqxuOAQ0sw9vk" alt="">
+                   <img class="img_home_left" src="https://drive.google.com/uc?export=view&id=1iBBeh2rAMUd1oRMjE7LhqxuOAQ0sw9vk" alt="">
                     <div class="mask">
                         <h2 class="class="view view-first"">landing page 4</h2>
                         <p class="class="view view-first""><%= t('.text_landing1') %></p>
                         <a href="#" class="info"><%= t('.read_more') %></a>
                     </div>
                 </div> 
-                </div></div>
-      
-
-    <div class="clearfix"></div>
-
-    <div class="content">
-       <div class="col-sm-4 col-md-4 col-lg-6">
-
-        
                 </div>
-                </div>
-        
-         <div class="col-sm-4 col-md-8 col-lg-6">
-           
-         
-                </div></div>
-         <div class="clearfix"></div>
-       
+                <div class="col-sm-12 col-md-12 col-lg-12"><div class="blog_1">
+                  <h1 class="toph1"><%= t('.post_effect') %></h1></div></div>
+                
+                
+                <div class="col-sm-4 col-md-4 col-lg-4"></div>
+                                  <div class="col-sm-4 col-md-4 col-lg-4">
+      <div class="view view-first">
+                   <img class="img_home_left" src="https://drive.google.com/uc?export=view&id=17JK7f6vLP3xcGUKWHDxjJ5-iHyAbG5i9" alt="">
+                    <div class="mask">
+                        <h2 class="class="view view-first""><%= t('.text_landing0') %></h2>
+                        <p class="class="view view-first""><%= t('.text_landing_title') %></p>
+                        <a href="../parallax/" class="info" target="_blank"><%= t('.read_more') %></a>
+                    </div>
+                </div> 
+               </div><div class="col-sm-4 col-md-4 col-lg-4"></div></div>
+               
   </div>
 </div>
 </div>
- <div class="clearfix_footer"></div>
+ 
 <footer>
     <div class="footer" id="footer">
         <div class="container">
@@ -222,8 +277,8 @@ a:hover {
                 <div class="f_cpl">
                <div class="col-md-4 col-sm-12 col-xs-12 my-col"><h3><%= t('.map_site') %></h3>
                     <ul class="center">
-                        <li class="btn"> <a class="nav-link3" href="<%= posts_path %>"><%= t('.btn_blog') %></a></li>
-                        <li class="btn"><a class="btn btn-outline-primary" href="<%= contact_us_path %>"><%= t('.btn_contacts') %></a></li>
+                        <li class="btn"><a class="nav-link3" href="<%= posts_path %>"><%= t('.btn_blog') %></a></li>
+                        <li class="btn"><a class="nav-link3" href="<%= contact_us_path %>"><%= t('.btn_contacts') %></a></li>
                        
                     </ul></div>
                <div class="col-md-4 col-sm-12 col-xs-12 my-col">
@@ -234,7 +289,7 @@ a:hover {
                     </ul>
                 </div>
                      <div class="col-md-4 col-sm-12 col-xs-12 my-col">
-                   <div class="money"><iframe src="https://funding.webmoney.ru/widgets/vertical/d7adb0db-02c5-4b93-aa6d-426107c6276a?bt=0&hs=1&sum=100" width="240" height="240" scrolling="no" style="border:none;"></iframe></div></div>
+                   <div class="money"><iframe src="https://money.yandex.ru/quickpay/shop-widget?writer=seller&targets=%D0%9F%D0%BE%D0%B4%D0%B4%D0%B5%D1%80%D0%B6%D0%B0%D1%82%D1%8C&targets-hint=&default-sum=&button-text=11&payment-type-choice=on&hint=&successURL=&quickpay=shop&account=410016924690067" width="242" height="242" frameborder="0" allowtransparency="true" scrolling="no"></iframe></div></div>
                 </div>
                     
                     <div class="col-lg-6  col-md-12 col-sm-12 col-xs-12 ">
@@ -596,6 +651,11 @@ $('body,html').animate({scrollTop: top}, 1000);
 </script>
 
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+<script type="text/javascript">
+  $('.carousel').carousel({
+    interval: 6000
+  })
+</script>
 
 </body>
 </html>
