--- a/app/assets/stylesheets/home.sass
+++ b/app/assets/stylesheets/home.sass
@@ -42,7 +42,7 @@
   position: relative
   padding-top: 3em
 .blog_1  
-  padding-top: 3em
+  padding-top: 6em
 .logo_top
   width: 180px
   height: 160px  
@@ -96,7 +96,7 @@
   text-shadow: 0px 2px 3px rgba(255, 255, 255, 1.5)
 .body-style
   background-color: #fcfcfc
-  background-image: image-url('bg_b.png')
+  background-image: image-url('bg_b.jpg')
   
 .container  
   width: 100% 
