--- a/app/assets/stylesheets/home.sass
+++ b/app/assets/stylesheets/home.sass
@@ -38,7 +38,7 @@
   height: 380px
   position: relative
 .blok_top2 
-  height: 180px
+  height: 80px
   position: relative
   padding-top: 3em
 .blog_1  
@@ -94,6 +94,13 @@
   transform: translate(-50%, -50%)
   margin-bottom: 40px
   text-shadow: 0px 2px 3px rgba(255, 255, 255, 1.5)
+.log
+  left: 50%
+  margin-right: -50%
+  transform: translate(-50%, -50%)  
+  position: absolute
+  bottom: 0
+  padding: 2em
 .body-style
   background-color: #fcfcfc
   background-image: image-url('bg_b.jpg')
