--- a/app/views/layouts/index.html.erb
+++ b/app/views/layouts/index.html.erb
@@ -157,30 +157,18 @@ a:hover {
    <div class="col-xs-3 col-md-3 col-lg-3"><div class="wow fadeInRightBig"><a href="https://www.youtube.com/channel/UCzBDZvjXprwp4nG9qgbudKA" target="_blank"><img class="logo_ds" src="parallax/images/photo.jpg" alt="анимация элементов при прокрутке страницы"/></a></div></div>
  </div>
        <div class="blok_top">
-        <div class="col-xs-3 col-md-3 col-lg-3">
-        <div class="logo_home" >
-    <div class="wow slideInLeft"><a href="https://rubyonrails.org/" target="_blank"><img class="logo_top" src="parallax/images/rails.png" alt="анимация элементов при прокрутке страницы"/></a></div>
+        <div class="col-xs-12 col-md-12 col-lg-12"></div></div>
+
+          <div class="col-xs-12 col-md-12 col-lg-12">
+       <div class="log">
+                   <li class="btn"><a class="logo_ubuntu" href="https://www.ubuntu.com/"></a></li>
+                   <li class="btn"><a class="logo_rails" href="https://rubyonrails.org/"></a></li>
+                   <li class="btn"><a class="logo_postgresql" href="https://www.postgresql.org/"></a></li>
+                   <li class="btn"><a class="logo_nginx" href="https://nginx.ru/ru/"></a></li></div> 
   </div>       
     
-   </div>
-<div class="col-xs-3 col-md-3 col-lg-3">
-        <div class="logo_home" >
-    <div class="wow slideInLeft"><a href="https://www.ubuntu.com/" target="_blank"><img class="logo_top" src="parallax/images/ubu.png" alt="анимация элементов при прокрутке страницы"/></a></div>
-  </div>       
-    
-   </div>
-   <div class="col-xs-3 col-md-3 col-lg-3">
-        <div class="logo_home" >
-    <div class="wow slideInLeft"><a href="https://www.postgresql.org/" target="_blank"><img class="logo_top" src="parallax/images/post.png" alt="анимация элементов при прокрутке страницы"/></a></div>
-  </div>       
-    
-   </div>
-   <div class="col-xs-3 col-md-3 col-lg-3">
-        <div class="logo_home" >
-    <div class="wow slideInLeft"><a href="https://nginx.ru/ru/" target="_blank"><img class="logo_top" src="parallax/images/nginx.png" alt="анимация элементов при прокрутке страницы"/></a></div>
-  </div>      
-    
-   </div>
+  
+
   
  </div>
  </div>
