--- a/app/assets/stylesheets/home.sass
+++ b/app/assets/stylesheets/home.sass
@@ -100,7 +100,9 @@
   transform: translate(-50%, -50%)  
   position: absolute
   bottom: 0
-  padding: 2em
+.line_row 
+  height: 85px
+  position: relative
 .body-style
   background-color: #fcfcfc
   background-image: image-url('bg_b.jpg')
