--- a/app/assets/stylesheets/posts.sass
+++ b/app/assets/stylesheets/posts.sass
@@ -6,11 +6,13 @@
 .navbar
   height: 66px 
   border: 0px
+  z-index: 999
 .navbar-collapse
   background-color: #f8f8f8
   margin-right: 0px
   margin-left: 0px
   width: 100%
+  z-index: 999
 .navbar-collapse.in
   overflow-y: hidden
 .container 
