--- a/app/views/layouts/index.html.erb
+++ b/app/views/layouts/index.html.erb
@@ -178,8 +178,7 @@ a:hover {
 </a></nav>
 
   </div>       
-    
-   
+      
  </div>
  </div><div class="row" id="bloc2"><div class="line_row"></div></div>
 <div class="col-sm-12 col-md-12 col-lg-12"><h1 class="toph1"><%= t('.gratitude_blog') %></h1></div>
@@ -191,7 +190,7 @@ a:hover {
                     <div class="mask">
                         <h2 class="class="view view-first""><%= t('.text_blog') %></h2>
                         <p class="class="view view-first""><%= t('.text_blog1') %></p>
-                        <a href="#" class="info"><%= t('.read_more') %></a>
+                        <a href="https://web-joys.ru/ru/posts/1" class="info"><%= t('.read_more') %></a>
                     </div>
                 </div></div> 
                 </div><div class="col-sm-4 col-md-4 col-lg-4"></div></div>
