--- a/app/assets/stylesheets/home.sass
+++ b/app/assets/stylesheets/home.sass
@@ -154,6 +154,7 @@
 .home_link
   font-family: 'Caveat', cursive
   font-size: 21px
+  z-index: 999;
 .animated 
   -webkit-animation-duration: .4s
   -o-animation-duration: .4s
