--- a/app/assets/stylesheets/posts.sass
+++ b/app/assets/stylesheets/posts.sass
@@ -13,24 +13,21 @@
   margin-left: 0px
   width: 100%
   z-index: 88
+  left: 15px
 .navbar-collapse.in
   overflow-y: hidden
 .container 
   margin-left: 0px
-
 .navbar-nav 
   margin: 0px
 .h1_title 
-  
   color: #838181
-  
 .h2_link
   color: #b1abab
   text-shadow: 1px 1px 1px #fff
   padding: 0.3em
 .link_h2  
   color: #ad650c
-  
 .link_h2:hover
   color: #d47b0d
 .link_to
@@ -49,7 +46,7 @@
 .body-stayl
   background-color: #fcfcfc  
 
-article.post
+.article.post
   float: left
   margin-bottom: 1em
   border-bottom: 1px solid #cccccc
@@ -58,10 +55,9 @@ article.post
 .title 
   left: 50%
   margin-right: -50% 
-
-section.post-summary
+.section.post-summary
   padding: .5em 0
-section.post-body
+.section.post-body
   padding-top: 1em 
 .img-show
   display: block  
