--- a/app/views/layouts/index.html.erb
+++ b/app/views/layouts/index.html.erb
@@ -28,7 +28,8 @@ a:hover {
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
      <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
      <link href="https://fonts.googleapis.com/css?family=Caveat" rel="stylesheet"> 
-     
+    <link rel="stylesheet" media="all" href="parallax/css/animate.css">
+     <script src="parallax/js/wow.min.js"></script>
 <script>new WOW().init();</script>         
      </head>
  <body class="body-style" style='overflow-x:hidden;'>  
@@ -166,7 +167,7 @@ a:hover {
                    <li class="btn"><a class="logo_postgresql" href="https://www.postgresql.org/"></a></li>
                    <li class="btn"><a class="logo_nginx" href="https://nginx.ru/ru/"></a></li></div> 
                     <nav id="menu2">
-<a href="#bloc2" class="scrollto"><div class="arrow-scroll">
+<a href="#bloc2" class="scrollto"><div class="arrow-scroll2">
     <div class="arrow-scroll__wrap arrow-scroll__wrap_animated">
       <svg style="fill:#000;" x="0px" y="0px" width="38.417px" height="18.592px" viewbox="0 0 38.417 18.592">
         <g>
