--- a/app/assets/stylesheets/home.sass
+++ b/app/assets/stylesheets/home.sass
@@ -167,66 +167,6 @@
   animation-delay: 0.5s
   position: relative
   z-index: 99
-.dws-progress-bar 
-  position: absolute
-  top: 50%
-  left: 50%
-  transform: translate(-50%, -50%)
-  z-index: 100
-
-.progress-percentage 
-  position: absolute
-  top: 50%
-  left: 50%
-  transform: translate(-50%, -50%)
-  font-size: 40px
-  font-family: "Verdana", sans-serif
-  font-weight: bold
-  color: #818080
-
-.preloader 
-  position: fixed
-  left: 0
-  top: 170px
-  right: 0
-  bottom: 0
-  z-index: 100
-  
-.main-preloader 
-  position: fixed
-  width: 100%
-  height: 100%
-  left: 0
-  top: 170px
-  z-index: 999999999
-  background-color: #fcfcfc
-  text-align: center
-
-.main-preloader 
-  position: absolute
-  top: 170px
-  width: 100%
-.main-preloader-inner 
-  position: absolute
-  top: 170px
-  width: 100%
-
-.main-preloader 
-  color: #ffffff
-  margin: 0
-.preloader-percentage 
-  color: #ffffff
-  margin: 0
-
-.main-preloader 
-  display: inline-block
-  float: center
-  font-size: 50px
-.preloader-percentage span 
-  display: inline-block
-  float: center
-  font-size: 50px
-
 .blog-header 
   background-size: cover
   text-align: center
@@ -317,6 +257,8 @@ h1
 
 .arrow-scroll
   bottom: 100px
+.arrow-scroll2
+  bottom: -25px  
 .p_home
   word-spacing: 2px
   font-size: 16px
